--- a/backend/package.json
+++ b/backend/package.json
@@ -3,18 +3,22 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon index.ts"
   },
   "dependencies": {
+    "cheerio": "^1.0.0-rc.12",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "^4.16.1",
     "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
     "morgan": "^1.9.1",
+    "request": "^2.88.2",
+    "sync-request": "^6.1.0",
+    "syncrequest": "^1.4.7",
     "typescript": "^4.8.4"
   },
   "devDependencies": {
+    "@types/cheerio": "^0.22.31",
     "@types/express": "^4.17.14",
     "@types/node": "^18.8.5",
     "cross-env": "^7.0.3",
