--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@pansy/react-amap": "^2.15.1",
+    "@types/antd": "^1.0.0",
+    "antd": "^4.23.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "vite-plugin-svgr": "^2.2.2"
   },
   "devDependencies": {
     "@types/node": "^18.8.3",
